--- a/css/main.css
+++ b/css/main.css
@@ -370,3 +370,17 @@
     font-size: 2rem;
 }
 /* //e-main-partnership */
+
+.follow-us {
+    text-align: center;
+}
+
+.follow-us h3 {
+    padding: 1rem 0;
+    margin: 0 57rem;
+    border-bottom: 2px solid var(--title-color);
+}
+.follow-us p {
+    font-size: 2rem;
+    margin-top: 1.6rem;
+}
