--- a/css/common.css
+++ b/css/common.css
@@ -104,3 +104,150 @@ body {
     width: 1440px;
     margin: 0 auto;
 }
+
+#header {
+    background: #000;
+    padding: 0 10rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    width: 192rem;
+}
+
+#header nav {
+    height: 9rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff; /* ★★질문: 이거 왜 버튼엔 적용이 안되는거임??*/
+}
+
+.but-login {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 300;
+}
+
+.gnb {
+    display: flex;
+}
+
+.gnb a {
+    display: block;
+    padding: 1rem 4rem;
+
+    font-weight: 600;
+    font-size: 2rem;
+}
+/* //e-header */
+
+#main section {
+    padding: 12rem 0;
+}
+/* //e-main */
+
+#footer {
+    padding: 8rem 0;
+    background: #000;
+    color: #fff;
+    text-align: center;
+}
+
+#footer strong {
+    display: flex;
+    justify-content: center;
+}
+
+#footer strong img {
+    width: 22.2rem;
+}
+
+.foot-app {
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+
+    margin-top: 5.5rem;
+}
+
+.foot-app a {
+    display: flex;
+    gap: 0.8rem;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0.5rem 3rem;
+    border-radius: 5rem;
+    background: #fff;
+
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: #000;
+}
+
+.foot-app a::before {
+    content: "";
+
+    display: block;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: no-repeat 50% / contain;
+}
+
+.foot-app a:nth-child(1)::before {
+    background-image: url(../img/app-logo01.svg);
+}
+.foot-app a:nth-child(2)::before {
+    background-image: url(../img/app-logo02.svg);
+}
+
+.foot-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 3.5rem;
+}
+
+.foot-link a {
+    font-size: 1.8rem;
+    padding: 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    position: relative;
+}
+
+.foot-link a::after {
+    content: "";
+
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    display: block;
+    width: 1px;
+    height: 12px;
+    background: #fff;
+}
+
+.foot-link li:last-child a::after {
+    display: none;
+}
+
+.foot-copyright {
+    font-size: 1.6rem;
+
+    margin-top: 3rem;
+}
+
+.foot-copyright p:last-child {
+    font-size: 1.4rem;
+
+    margin-top: 2.5rem;
+}
