--- a/css/common.css
+++ b/css/common.css
@@ -85,9 +85,9 @@ h3 {
     color: var(--title-color);
 }
 
-img {
+/* img {
     max-width: 100%;
-}
+} */
 
 button {
     background-color: transparent;
@@ -111,7 +111,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 999;
 
     width: 192rem;
 }
