--- a/css/common.css
+++ b/css/common.css
@@ -25,6 +25,16 @@
     --white60p: rgba(255, 255, 255, 0.6);
     --white70p: rgba(255, 255, 255, 0.7);
     --white80p: rgba(255, 255, 255, 0.8);
+    --white90p: rgba(255, 255, 255, 0.9);
+    --black10p: rgba(0, 0, 0, 0.1);
+    --black20p: rgba(0, 0, 0, 0.2);
+    --black30p: rgba(0, 0, 0, 0.3);
+    --black40p: rgba(0, 0, 0, 0.4);
+    --black50p: rgba(0, 0, 0, 0.5);
+    --black60p: rgba(0, 0, 0, 0.6);
+    --black70p: rgba(0, 0, 0, 0.7);
+    --black80p: rgba(0, 0, 0, 0.8);
+    --black90p: rgba(0, 0, 0, 0.9);
 }
 
 ::selection {
