--- a/css/main.css
+++ b/css/main.css
@@ -41,10 +41,10 @@
     align-items: center;
     gap: 2.5rem;
 }
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
+.promotion-slider .swiper-horizontal > .swiper-pagination-bullets,
+.promotion-slider .swiper-pagination-bullets.swiper-pagination-horizontal,
+.promotion-slider .swiper-pagination-custom,
+.promotion-slider .swiper-pagination-fraction {
     bottom: 3.2rem;
 }
 
@@ -213,12 +213,12 @@
     width: 46.7rem;
     padding-bottom: 4px;
     opacity: 0.3;
+    /* transition: 0.5s; */
 }
 
 .lunch-set-slider .swiper-slide-active,
 .lunch-set-slider .swiper-slide-next {
     opacity: 1;
-    transition: 0.5s;
 }
 
 .lunch-name strong {
@@ -508,23 +508,41 @@
     margin-top: 1.6rem;
 }
 
-.follou-slider-wrap {
+/* swiper 질문 이거 양옆에 auto때문인지 보였다안보였다 하는데 보이게하고시퓨어요 */
+/* 투명도 지금은 op로 개체마다 바꿨는데 그라데이션으로 하고 싶어요 이거는 posa해서 포토샵 마스크처럼 흰색그라데이션 넣으면될까요??? */
+.follow-slider-wrap {
     margin-top: 8rem;
 }
 
-.follou-slider-wrap a {
-    display: block;
+.follow-slider-wrap .swiper-wrapper {
+    min-height: 35rem;
+    align-items: end;
+}
+
+.follow-slider .swiper-slide {
     width: 30rem;
+    height: 30rem;
+    margin: 0 9.5px;
     overflow: hidden;
+    opacity: 0.3;
+
+    transition: 0.4s;
 
     position: relative;
 }
 
-.follow-slider .swiper-slide:nth-child(4) a {
+.follow-slider .swiper-slide-active {
     width: 35rem;
+    height: 35rem;
+    opacity: 1;
 }
 
-.follou-slider-wrap a img {
+.follow-slider .swiper-slide-prev,
+.follow-slider .swiper-slide-next {
+    opacity: 0.9;
+}
+
+.follow-slider-wrap a img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -563,7 +581,9 @@
     background: url(../img/insta-logo.png) no-repeat 50%;
 }
 
-.follow-slider .swiper-slide a:hover .insta-id {
+.follow-slider .swiper-slide-active a:hover .insta-id,
+.follow-slider .swiper-slide-prev a:hover .insta-id,
+.follow-slider .swiper-slide-next a:hover .insta-id {
     top: 50%;
     opacity: 1;
 }
@@ -573,4 +593,19 @@
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
+}
+
+.follow-slider-wrap .swiper-horizontal > .swiper-pagination-bullets,
+.follow-slider-wrap .swiper-pagination-bullets.swiper-pagination-horizontal,
+.follow-slider-wrap .swiper-pagination-custom,
+.follow-slider-wrap .swiper-pagination-fraction {
+    bottom: -3rem;
+}
+
+.follow-slider-wrap .swiper {
+    overflow: visible;
+}
+
+.follow-slider-wrap .swiper-pagination-bullet-active {
+    background: var(--black60p);
 }
