--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@
 }
 
 .steak-detail li figure::before {
-    content: '';
+    content: "";
     z-index: 100;
 
     position: absolute;
@@ -126,7 +126,7 @@
 }
 
 .steak-detail li + li figure::before {
-    content: '';
+    content: "";
 
     position: absolute;
     top: 0;
@@ -285,7 +285,7 @@
     position: relative;
 }
 .store-cards li::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 4rem;
     left: 4rem;
@@ -298,7 +298,7 @@
     transition: 0.4s;
 }
 .store-cards li::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 4rem;
     left: 14rem;
@@ -342,7 +342,7 @@
 }
 
 .store-cards li a::after {
-    content: '';
+    content: "";
 
     position: absolute;
     bottom: 4rem;
@@ -441,7 +441,7 @@
 }
 
 .membership-cards li::before {
-    content: '0' counter(number);
+    content: "0" counter(number);
 
     font-weight: 900;
     font-size: 2rem;
@@ -494,7 +494,7 @@
 }
 
 .membership-left a i::after {
-    content: '';
+    content: "";
     width: 3.5rem;
     height: 3.5rem;
     background: url(../img/membership_icon.svg) no-repeat 50%;
@@ -554,7 +554,7 @@
 }
 
 .follow-slider-wrap::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 50%;
     left: 0;
@@ -567,7 +567,7 @@
 }
 
 .follow-slider-wrap::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 50%;
     right: 0;
@@ -605,7 +605,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    font-family: 'PuradakGentleGothicR';
+    font-family: "PuradakGentleGothicR";
     font-size: 2.4rem;
     color: #fff;
 
@@ -624,7 +624,7 @@
 }
 
 .follow-slider .swiper-slide a .insta-id::before {
-    content: '';
+    content: "";
 
     display: block;
     width: 3rem;
@@ -671,4 +671,138 @@
 .follow-slider-wrap .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
 .follow-slider-wrap .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0 1.5rem;
+}
+
+/* RWD */
+
+@media screen and (max-width: 1440px) {
+    .inner {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .inner {
+        width: 74rem;
+    }
+
+    h3 {
+        font-size: 4rem;
+    }
+
+    #header {
+        padding: 0 4rem;
+    }
+
+    .gnb,
+    .btn-login {
+        display: none;
+    }
+
+    .btn-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 3rem;
+        height: 3rem;
+        background: url(../img/icon-more.svg) no-repeat 50% / cover;
+    }
+
+    .promotion-slider img {
+        height: 1024px;
+        object-fit: cover;
+    }
+
+    .promotion-slider .btn {
+        display: none;
+    }
+
+    .detail-con {
+        width: 32rem;
+        height: 45rem;
+        padding: 7.5rem 1rem 7.5rem 3rem;
+    }
+
+    .steak-detail li + li > .detail-con {
+        padding: 7.5rem 3rem 7.5rem 1rem;
+    }
+
+    .con-text strong {
+        font-size: 1.8rem;
+    }
+
+    .con-text h3 {
+        margin-top: 0.5rem;
+    }
+
+    .con-text p {
+        font-size: 1.6rem;
+    }
+
+    .lunch-text {
+        width: 21rem;
+    }
+
+    .lunch-text h3 {
+        font-size: 4.8rem;
+    }
+
+    .lunch-text p {
+        font-size: 2rem;
+    }
+
+    /* .lunch-set-slider-wrap {
+        width: 52.7rem;
+        height: 40rem;
+    }
+
+    .lunch-set-slider-wrap .lunch-set-slider {
+        width: 560px; (270*2)+20
+    }
+
+    .lunch-set-slider-wrap .swiper-slide {
+        width: 270px;
+    }
+
+    .lunch-set-slider-wrap .btn {
+        display: none;
+    }*/
+
+    /* ★★질문: swiper js slidePerView 때문에 뭉게지는데 js반응형 처리는 어떻게 하나용 */
+
+    .store .inner {
+        width: 100%;
+    }
+
+    .store-cards li a {
+        width: 27.333rem;
+        height: 20rem;
+        padding: 3rem;
+    }
+
+    .store-cards li a::after {
+        width: 5.5rem;
+        height: 5.5rem;
+    }
+
+    .store-cards li a strong {
+        font-size: 3.2rem;
+    }
+
+    .store-cards li a p {
+        font-size: 2rem;
+    }
+
+    .store-cards li::after {
+        left: 9rem;
+        transform: translate(-90%, -250%) rotate(45deg);
+    }
+
+    .store-cards li:hover::before {
+        width: 5rem;
+    }
+
+    .store-cards li:hover::after {
+        width: 1.5rem;
+    }
 }
