--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,16 @@
     z-index: 10;
 
     width: 20rem;
+    width: 10.4166%;
     height: 100%;
     /* background: orangered; */
 }
 
 .promotion-slider .btn img {
     width: 3rem;
-    height: 5.8rem;
+    width: 15%;
+    /* height: 5.8rem; */
+    aspect-ratio: 1/1.9333;
 }
 
 .promotion-slider .btn-prev {
@@ -79,6 +82,7 @@
     width: 70.7rem;
     height: 45rem;
     padding: 5.5rem 6rem 5.5rem 30rem;
+    padding: 5.5rem 6rem 5.5rem 15.625%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -86,6 +90,7 @@
 
 .steak-detail li + li > .detail-con {
     padding: 5.5rem 30rem 5.5rem 6rem;
+    padding: 5.5rem 15.625% 5.5rem 6rem;
 }
 
 .con-text strong {
@@ -106,10 +111,22 @@
 
 .steak-detail li figure {
     width: 119.3rem;
+    width: 62.1354%;
     height: 45rem;
     overflow: hidden;
 
     position: relative;
+}
+
+.steak-detail li figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.8s;
+}
+
+.steak-detail li:hover figure img {
+    transform: scale(1.15);
 }
 
 .steak-detail li figure::before {
@@ -138,16 +155,6 @@
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-.steak-detail li figure img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 0.8s;
-}
-
-.steak-detail li:hover figure img {
-    transform: scale(1.15);
-}
 /* //e-main-steak set */
 
 .lunch-con {
@@ -161,6 +168,7 @@
     justify-content: space-between;
 
     width: 24.3rem;
+    width: 16.875%;
 }
 
 .lunch-text strong {
@@ -170,6 +178,8 @@
 
 .lunch-text h3 {
     font-size: 6.4rem;
+    /* font-size: clamp(4.8rem, 3.333vw, 6.4rem); */
+    font-size: max(4.8rem, 3.333vw);
 
     margin-top: 1rem;
     padding-bottom: 1rem;
@@ -178,6 +188,7 @@
 
 .lunch-text p {
     font-size: 2.4rem;
+    font-size: max(2rem, 1.25vw);
 
     margin-top: 3rem;
 }
@@ -283,7 +294,32 @@
 
 .store-cards li {
     position: relative;
+    width: 48rem;
+    width: 33.333%;
+    /* height: 30rem; */
+    aspect-ratio: 1/0.625;
 }
+
+.store-cards li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    padding: 4rem;
+
+    background: var(--main-color);
+
+    position: relative;
+}
+
+.store-cards li + li a {
+    background: #d2b48c;
+}
+
+.store-cards li + li + li a {
+    background: #89765d;
+}
+
 .store-cards li::before {
     content: "";
     position: absolute;
@@ -320,27 +356,6 @@
     transition: 0.4s 0.2s;
 }
 
-.store-cards li a {
-    display: flex;
-    flex-direction: column;
-
-    width: 48rem;
-    height: 30rem;
-    padding: 4rem;
-
-    background: var(--main-color);
-
-    position: relative;
-}
-
-.store-cards li + li a {
-    background: #d2b48c;
-}
-
-.store-cards li + li + li a {
-    background: #89765d;
-}
-
 .store-cards li a::after {
     content: "";
 
@@ -349,7 +364,9 @@
     right: 4rem;
 
     width: 11rem;
-    height: 11rem;
+    width: 22.9167%;
+    aspect-ratio: 1/1;
+    /* height: 11rem; */
 
     background: no-repeat 50%;
     background-size: contain; /* 배경으로 들어간 이미지는 가상요소 자체 크기에 영향을 받으므로 cover하면 100% auto */
@@ -368,6 +385,7 @@
 .store-cards li a strong {
     font-weight: 600;
     font-size: 3.6rem;
+    font-size: max(3.2rem, 1.875vw);
     color: #fff;
     line-height: 1;
 }
@@ -375,6 +393,7 @@
 .store-cards li a p {
     font-weight: 300;
     font-size: 2.4rem;
+    font-size: max(2rem, 1.25vw);
     color: #fff;
 }
 /* //e-main-store */
@@ -382,14 +401,20 @@
 .membership-con {
     display: flex;
     gap: 100px;
+    gap: 6.9444%;
 }
 
 .membership-text {
     width: 24.5rem;
+    width: 16.875%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.membership-title h3 {
+    font-size: max(2.8vw, 4.8rem);
 }
 
 .membership-title strong {
@@ -397,10 +422,12 @@
 
     font-weight: 500;
     font-size: 3.2rem;
+    font-size: 1.6667vw;
     line-height: 1;
 
     margin-top: 2rem;
 }
+
 .membership-title p:first-of-type {
     font-weight: 400;
     font-size: 1.8rem;
@@ -412,6 +439,7 @@
 
 .membership-title p + p {
     font-size: 2.4rem;
+    /* font-size: 1.25vw; */
 
     margin-top: 3rem;
 }
@@ -423,14 +451,17 @@
 .membership-cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 4rem 3.75rem;
+    gap: 4rem 3.42465%;
+    width: 100%;
 
     counter-reset: number;
 }
 
 .membership-cards li {
     width: 34rem;
-    height: 28rem;
+    width: 31.0502%;
+    aspect-ratio: 1/0.8235;
+    /* height: 28rem; */
     padding: 6rem 4rem;
     border: 1px solid var(--line-color);
 
@@ -445,6 +476,7 @@
 
     font-weight: 900;
     font-size: 2rem;
+    /* font-size: max(1.6rem, 1.04166vw); */
     color: var(--main-color);
 
     margin-top: 0.2rem;
@@ -453,11 +485,13 @@
 .membership-cards li dl dt {
     font-weight: 600;
     font-size: 2.4rem;
+    /* font-size: clamp(1.8rem, 1.25vw, 2rem); */
     color: var(--title-color);
 }
 
 .membership-cards li dl dd {
     font-size: 2rem;
+    /* font-size: max(1.4rem, 1.04166vw); */
 
     margin-top: 2rem;
 }
@@ -471,8 +505,10 @@
     bottom: 0;
     right: 0;
 
-    width: 34rem;
-    height: 28rem;
+    /* width: 34rem;
+    height: 28rem; */
+    width: 31.0502%;
+    aspect-ratio: 1/0.8235;
     background: var(--main-color);
     padding: 4rem;
 
@@ -484,6 +520,7 @@
 .membership-left a i {
     font-weight: 600;
     font-size: 3.2rem;
+    font-size: 1.66666vw;
     line-height: 1;
     color: #fff;
 
@@ -495,9 +532,10 @@
 
 .membership-left a i::after {
     content: "";
-    width: 3.5rem;
-    height: 3.5rem;
-    background: url(../img/membership_icon.svg) no-repeat 50%;
+    width: 2.2rem;
+    aspect-ratio: 1/1;
+    /* height: 3.5rem; */
+    background: url(../img/membership_icon.svg) no-repeat 50% / contain;
 }
 /* //e-main-membership */
 
@@ -505,12 +543,16 @@
     display: flex;
 }
 
+.partnership-cards li {
+    width: 50%;
+}
+
 .partnership-cards li a {
-    background: url(../img/partnership01.jpg);
+    background: url(../img/partnership01.jpg) 50% / cover;
 
     display: flex;
     align-items: end;
-    width: 72rem;
+    width: 100%;
     height: 22rem;
     padding: 4rem 5rem;
 
@@ -518,7 +560,7 @@
 }
 
 .partnership-cards li + li a {
-    background: url(../img/partnership02.jpg) 50%;
+    background-image: url(../img/partnership02.jpg);
 }
 
 .partnership-cards li a dl dt {
@@ -751,13 +793,15 @@
         font-size: 2rem;
     }
 
-    /* .lunch-set-slider-wrap {
+    .lunch-set-slider-wrap {
         width: 52.7rem;
         height: 40rem;
     }
 
     .lunch-set-slider-wrap .lunch-set-slider {
-        width: 560px; (270*2)+20
+        width: 560px;
+        height: 400px;
+        /* (270*2)+20 */
     }
 
     .lunch-set-slider-wrap .swiper-slide {
@@ -766,9 +810,28 @@
 
     .lunch-set-slider-wrap .btn {
         display: none;
-    }*/
+    }
 
-    /* ★★질문: swiper js slidePerView 때문에 뭉게지는데 js반응형 처리는 어떻게 하나용 */
+    .lunch-name {
+        bottom: 3rem;
+        right: 3rem;
+        /* width: 18rem; */
+    }
+
+    .lunch-name strong {
+        font-size: 1.8rem;
+        line-height: 1;
+    }
+
+    .lunch-name p {
+        font-size: 1.6rem;
+        line-height: 1;
+    }
+
+    .view-more {
+        width: 21.1rem;
+        height: 6rem;
+    }
 
     .store .inner {
         width: 100%;
@@ -805,4 +868,107 @@
     .store-cards li:hover::after {
         width: 1.5rem;
     }
+
+    .membership-con {
+        flex-direction: column;
+    }
+
+    .membership-text {
+        width: 100%;
+
+        position: relative;
+    }
+
+    .membership-text .view-more {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .membership-title h3 {
+        font-size: 5.6rem;
+
+        padding-bottom: 1rem;
+        border-bottom: 2px solid var(--title-color);
+    }
+
+    .membership-title strong {
+        font-weight: 700;
+        font-size: 3.6rem;
+    }
+
+    .membership-title p:first-of-type {
+        font-weight: 500;
+        font-size: 2.1rem;
+
+        padding-bottom: 0;
+        border-bottom: none;
+    }
+
+    .membership-title p + p {
+        font-size: 1.8rem;
+
+        margin-top: 2rem;
+    }
+
+    .membership-cards {
+        gap: 2.2rem 2rem;
+
+        margin-top: 5rem;
+    }
+
+    .membership-cards li {
+        width: 23.3rem;
+        height: 19.8rem;
+        padding: 4rem 2rem;
+    }
+
+    .membership-cards li::before {
+        font-size: 1.6rem;
+    }
+
+    .membership-cards li dl dt {
+        font-weight: 500;
+        font-size: 2rem;
+    }
+
+    .membership-cards li dl dd {
+        font-size: 1.4rem;
+
+        margin-top: 1.5rem;
+    }
+
+    .membership-left a {
+        width: 23.3rem;
+        height: 19.6rem;
+        padding: 3rem 2rem;
+    }
+
+    .membership-left a i {
+        font-weight: 700;
+        font-size: 2.4rem;
+    }
+
+    .partnership .inner {
+        width: 100%;
+    }
+
+    .partnership-cards li a {
+        height: 18rem;
+        padding: 3rem 4rem;
+    }
+
+    .partnership-cards li a dl dt {
+        font-size: 3rem;
+    }
+
+    .partnership-cards li a dl dd {
+        font-size: 1.5rem;
+    }
+
+    .follow-title h3 {
+        font-size: 4rem;
+    }
+
+    /* 이거 breakpoint로 spaceBetween 변경했는데 확인을 못하게소요 */
 }
