--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,14 @@
 
 .promotion-slider {
     position: relative;
+    width: 100%;
+    height: 100vh;
 }
 
-.promotion-slider img {
+.promotion-slider .swiper-slide img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .promotion-slider .btn {
@@ -726,6 +730,7 @@
 @media screen and (max-width: 820px) {
     .inner {
         width: 74rem;
+        width: 90.2439%;
     }
 
     h3 {
@@ -750,9 +755,8 @@
         background: url(../img/icon-more.svg) no-repeat 50% / cover;
     }
 
-    .promotion-slider img {
-        height: 1024px;
-        object-fit: cover;
+    .promotion-slider {
+        height: 100vh;
     }
 
     .promotion-slider .btn {
@@ -837,27 +841,44 @@
         width: 100%;
     }
 
+    .store-cards li {
+        /* width: 27.333rem; */
+        /* height: 20rem; */
+        aspect-ratio: 1/0.7317;
+    }
+
     .store-cards li a {
-        width: 27.333rem;
-        height: 20rem;
         padding: 3rem;
+        padding: 10.9757%;
     }
 
     .store-cards li a::after {
-        width: 5.5rem;
-        height: 5.5rem;
+        /* width: 5.5rem; */
+        width: 20.12219%;
+        /* height: 5.5rem; */
+
+        bottom: 10.9757%;
+        right: 10.9757%;
     }
 
     .store-cards li a strong {
         font-size: 3.2rem;
+        font-size: 3.9024vw;
     }
 
     .store-cards li a p {
         font-size: 2rem;
+        font-size: 2.439vw;
+    }
+
+    .store-cards li::before {
+        bottom: 10.9757%;
+        left: 10.9757%;
     }
 
     .store-cards li::after {
-        left: 9rem;
+        bottom: 10.9757%;
+        left: calc(10.9757% + 5rem);
         transform: translate(-90%, -250%) rotate(45deg);
     }
 
@@ -912,14 +933,16 @@
     }
 
     .membership-cards {
-        gap: 2.2rem 2rem;
+        gap: 2rem 2.4546rem;
+        gap: 2rem 3.317%;
 
         margin-top: 5rem;
     }
 
     .membership-cards li {
-        width: 23.3rem;
-        height: 19.8rem;
+        /* width: 23.3rem;
+        height: 19.8rem; */
+        /* pc에서 %잡은걸아 같음 */
         padding: 4rem 2rem;
     }
 
@@ -939,8 +962,6 @@
     }
 
     .membership-left a {
-        width: 23.3rem;
-        height: 19.6rem;
         padding: 3rem 2rem;
     }
 
@@ -969,6 +990,4 @@
     .follow-title h3 {
         font-size: 4rem;
     }
-
-    /* 이거 breakpoint로 spaceBetween 변경했는데 확인을 못하게소요 */
 }
